--- a/BicycleAngular/src/app/app.component.html
+++ b/BicycleAngular/src/app/app.component.html
@@ -1,4 +1,10 @@
-<h1>Bicycle MarketPlace</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-10-center">
+            <h1>Bicycle MarketPlace</h1>
+        </div>
+    </div>
+</div>
 <!-- <div class="container">
     <div class="row">
         <div class="col-4">
@@ -13,10 +19,6 @@
 <button [routerLink]="['/cakeForm']">Load Cake Form</button>
 <button [routerLink]="['/commentForm']">Load Comments</button> -->
 <router-outlet>
-
-
-
-
 </router-outlet> 
 
 
