--- a/BicycleAngular/src/app/home/home.component.html
+++ b/BicycleAngular/src/app/home/home.component.html
@@ -1,31 +1,40 @@
-<button [routerLink]="['/home']">Browse</button>
-<button [routerLink]="['/profile']">My listings</button>
-<button [routerLink]="['/api/user/logout']">Log Out</button>
-<router-outlet></router-outlet> 
-<div *ngIf="contactUser != null">
-    <h3> This is the contacts Info:</h3>
-    <p> Name: {{contactUser.firstName}} {{contactUser.lastName}} </p>
-    <p>Email: {{contactUser.email}} </p> 
-</div>
-<div *ngFor="let user of allUsers">
-    <!-- {{user.firstName}} {{user.lastName}} {{user.email}} -->
-    <div *ngFor="let bike of user.bicycles" class="itemCard">
-        <div>
-            <img class="img" src="{{bike.imageUrl}}">
+<div class="container">
+    <div class="row justify-content-around">
+        <div class="col-10-center">
+            <button class="btn btn-dark" [routerLink]="['/home']">Browse</button>
+            <button class="btn btn-dark"[routerLink]="['/profile']">My listings</button>
+            <button class="btn btn-dark" [routerLink]="['/api/user/logout']">Log Out</button>
         </div>
-        <div>
-            {{bike.title}} {{bike.description}}
-        </div>
-        <div>
-            {{bike.price}} 
-            {{bike.location}}
-            <div *ngIf="user.email === currentUser.email">
-                <button (click)="deleteBike(bike._id)" >Delete!</button>  
+    <div class="row">
+        <div class="col-10-center">
+            <router-outlet></router-outlet> 
+            <div *ngIf="contactUser != null">
+                <h3> This is the contacts Info:</h3>
+                <p> Name: {{contactUser.firstName}} {{contactUser.lastName}} </p>
+                <p>Email: {{contactUser.email}} </p> 
             </div>
-            <div *ngIf="user.email != currentUser.email">
-                <button (click)="contactInfo(user.email)" >Contact!</button>
+            <div *ngFor="let user of allUsers">
+                <!-- {{user.firstName}} {{user.lastName}} {{user.email}} -->
+                <div *ngFor="let bike of user.bicycles" class="itemCard">
+                    <div>
+                        <img class="img" src="{{bike.imageUrl}}">
+                    </div>
+                    <div>
+                        {{bike.title}} {{bike.description}}
+                    </div>
+                    <div>
+                        {{bike.price}} 
+                        {{bike.location}}
+                        <div *ngIf="user.email === currentUser.email">
+                            <button (click)="deleteBike(bike._id)" >Delete!</button>  
+                        </div>
+                        <div *ngIf="user.email != currentUser.email">
+                            <button (click)="contactInfo(user.email)" >Contact!</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    
-</div>
+</div>    
+
