--- a/BicycleAngular/src/app/login/login.component.html
+++ b/BicycleAngular/src/app/login/login.component.html
@@ -1,20 +1,31 @@
-<form (submit)="loginHandler( $event )">
-    <div>
-        <label for="loginEmail">
-            Email:
-        </label>
-        <input type="text" name="loginEmail" id="loginEmail" [(ngModel)]="loginEmail"/>
+<div class="container">
+    <div class="row align-items-end">
+        <div class="col-10-center">
+            <form (submit)="loginHandler( $event )">
+                <div>
+                    <label for="loginEmail">
+                        Email:
+                    </label>
+                    <input class="form-control"  type="text" name="loginEmail" id="loginEmail" [(ngModel)]="loginEmail"/>
+                </div>
+                <div>
+                    <label for="loginPassword">
+                        Password:
+                    </label>
+                    <input class="form-control"  type="password" name="loginPassword" id="loginPassword" [(ngModel)]="loginPassword"/>
+                </div>
+                <button class="btn btn-dark mt-3" type="submit">
+                    Login
+                </button>
+                <div>
+                    <p> Don't have an account?</p>
+                    <button  class=" btn btn-dark" [routerLink]="['/register']">Register</button>
+                    
+                </div>
+                <div>
+                    {{errorMessage}}
+                </div>
+            </form>
+        </div>
     </div>
-    <div>
-        <label for="loginPassword">
-            Password:
-        </label>
-        <input type="password" name="loginPassword" id="loginPassword" [(ngModel)]="loginPassword"/>
-    </div>
-    <button type="submit">
-        Login
-    </button>
-    <div>
-        {{errorMessage}}
-    </div>
-</form>
+</div>    
