--- a/BicycleAngular/src/app/user-register/user-register.component.html
+++ b/BicycleAngular/src/app/user-register/user-register.component.html
@@ -1,36 +1,48 @@
-<form (submit)="registerHandler( $event )">
-    <div>
-        <label for="firstName"> First Name:</label>
-        <input type="text" name="firstName" id="firstName" [(ngModel)]="newUser.firstName">
+<div class="container">
+    <div class="row align-items-end">
+        <div class="col-10-center">
+            <button  class=" btn btn-dark" [routerLink]="['/login']">Go to Login</button>
+        </div>
     </div>
-    <div>
-        <label for="lastName"> Last Name:</label>
-        <input type="text" name="lastName" id="lastName" [(ngModel)]="newUser.lastName">
+    <div class="row">
+        <div class="col-10-center">
+            <form (submit)="registerHandler( $event )">
+                <div>
+                    <label for="firstName"> First Name:</label>
+                    <input class="form-control" type="text" name="firstName" id="firstName" [(ngModel)]="newUser.firstName">
+                </div>
+                <div>
+                    <label for="lastName"> Last Name:</label>
+                    <input class="form-control" type="text" name="lastName" id="lastName" [(ngModel)]="newUser.lastName">
+                </div>
+                <div>
+                    <label for="email">
+                        Email:
+                    </label>
+                    <input class="form-control" type="email" name="email" id="email" [(ngModel)]="newUser.email"/>
+                </div>
+                
+                <div>
+                    <label for="password">
+                        Password:
+                    </label>
+                    <input class="form-control" type="password" name="password" id="password" [(ngModel)]="newUser.password"/>
+                </div>
+                <div>
+                    <label for="confirmPassword">
+                        Confirm Password:
+                    </label>
+                    <input class="form-control" type="password" name="confirmPassword" id="confirmPassword" [(ngModel)]="newUser.confirmPassword"/>
+                </div>
+                <button class="btn btn-dark mt-3" type="submit">
+                    Login
+                </button>
+                <div>
+                    {{errorMessage}}
+                </div>
+                {{newUser.firstName}}
+            </form>
+            
+        </div>
     </div>
-    <div>
-        <label for="email">
-            Email:
-        </label>
-        <input type="email" name="email" id="email" [(ngModel)]="newUser.email"/>
-    </div>
-    
-    <div>
-        <label for="password">
-            Password:
-        </label>
-        <input type="password" name="password" id="password" [(ngModel)]="newUser.password"/>
-    </div>
-    <div>
-        <label for="confirmPassword">
-            Confirm Password:
-        </label>
-        <input type="password" name="confirmPassword" id="confirmPassword" [(ngModel)]="newUser.confirmPassword"/>
-    </div>
-    <button type="submit">
-        Login
-    </button>
-    <div>
-        {{errorMessage}}
-    </div>
-    {{newUser.firstName}}
-</form>
+</div>
