--- a/BicycleAngular/src/app/app.component.html
+++ b/BicycleAngular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-10-center">
-            <h1>Bicycle MarketPlace</h1>
+            <h1>Polls app</h1>
         </div>
     </div>
 </div>
